apply plugin: 'java-library'
apply plugin: "maven-publish"

group='com.github.doordeck'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

buildscript {
    repositories {
        mavenLocal()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "gradle.plugin.org.inferred:gradle-processors:2.2.0"
        classpath 'com.github.dcendents:android-maven-plugin:1.2'
    }
}

dependencies {
    implementation "org.immutables:value-annotations:2.7.5" // or implementation, or compileOnly
    annotationProcessor "org.immutables:value:2.7.5"
    testAnnotationProcessor "org.immutables:value:2.7.5"

    implementation "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${versions.jackson}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:${versions.jackson}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-guava:${versions.jackson}"

    implementation "com.google.guava:guava:${versions.guava}-jre"

    implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
    implementation "com.squareup.retrofit2:converter-jackson:${versions.retrofit}"
    implementation "com.squareup.retrofit2:converter-scalars:${versions.retrofit}"
    implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"

    implementation "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}"
    implementation deps.joda
    
    compileOnly deps.jsr305

    testImplementation 'junit:junit:4.12'
}



afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.java
            }
        }
        repositories {
            maven {
                url 'file://' + "${System.properties['user.home']}/.m2/repository"
            }
        }
    }
}
